Some jumbo-moji were getting cut off, fixed

--- a/slack-styles.user.css
+++ b/slack-styles.user.css
@@ -27,7 +27,7 @@
     height: 64px;
     width: auto;
     background-position: left;
-    background-size: auto;
+    background-size: contain;
 }
 
 .c-message__body .emoji.emoji-sizer:not(.emoji-only) {
